--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
   </head>
   <body>
     <header>
-      <h1>LightHouse//hero image or maybe current weather in brief//</h1>
+      <h1>LightHouse</h1>
     </header>
-    <section id="today">
+    <section id="current-weather">
       <h2>current conditions</h2>
       <ul>
         <li>airTemp</li>
-        <li>waterTemp</li>
+        <li>air pressure</li>
         <li>wind speed/direction</li>
+        <li>gust</li>
       </ul>
     </section>
-    <section id="three-day">
-      <h2>three day forecast</h2>
+    <section id="search-by-time">
+      <h2>search by time</h2>
       <ul>
         <li>airTemp</li>
         <li>waterTemp</li>
