--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@
     </header>
     <section id="current-weather">
       <h2>current conditions</h2>
-      <ul>
-        <li>airTemp</li>
-        <li>air pressure</li>
-        <li>wind speed/direction</li>
-        <li>gust</li>
-      </ul>
+      <ul id="current-weather-results"></ul>
     </section>
     <section id="search-by-time">
       <h2>search by time</h2>
@@ -30,6 +25,11 @@
         <li>wind speed/direction</li>
       </ul>
     </section>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.js"
+      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+      crossorigin="anonymous"
+    ></script>
     <script src="index.js" async defer></script>
   </body>
 </html>
