--- a/index.html
+++ b/index.html
@@ -18,7 +18,38 @@
       <ul id="current-weather-results"></ul>
     </section>
     <section id="search-by-time">
-      <h2>search by time</h2>
+      <h2 id="time-picker">search by time</h2>
+      <form>
+        <label for="time">Choose a time:</label>
+        <select id="cars" name="cars">
+          <option value="0">12:00 am</option>
+          <option value="1">1:00 am</option>
+          <option value="2">2:00 am</option>
+          <option value="3">3:00 am</option>
+          <option value="4">4:00 am</option>
+          <option value="5">5:00 am</option>
+          <option value="6">6:00 am</option>
+          <option value="6">7:00 am</option>
+          <option value="8">8:00 am</option>
+          <option value="9">9:00 am</option>
+          <option value="10">10:00 am</option>
+          <option value="11">11:00 am</option>
+          <option value="12">12:00 pm</option>
+          <option value="13">1:00 pm</option>
+          <option value="14">2:00 pm</option>
+          <option value="15">3:00 pm</option>
+          <option value="16">4:00 pm</option>
+          <option value="17">5:00 pm</option>
+          <option value="18">6:00 pm</option>
+          <option value="19">7:00 pm</option>
+          <option value="20">8:00 pm</option>
+          <option value="21">9:00 pm</option>
+          <option value="22">10:00 pm</option>
+          <option value="23">11:00 pm</option>
+        </select>
+        <input type="submit" />
+      </form>
+
       <ul>
         <li>airTemp</li>
         <li>waterTemp</li>
@@ -30,6 +61,7 @@
       integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
       crossorigin="anonymous"
     ></script>
+    <!--<script src="https://cdn.jsdelivr.net/npm/timepicker/"></script>-->
     <script src="index.js" async defer></script>
   </body>
 </html>
