added reset btn

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           <option value="23">11:00 pm</option>
         </select>
         <input id=" selection" type="submit" />
+        <button id="reset" type="button">reset</button>
       </form>
       <ul id="selected-weather-results"></ul>
     </section>
