--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <header>
       <h1>LightHouse</h1>
+      <p>Check Marine Weather Conditions in Tampa Bay</p>
     </header>
     <section id="current-weather">
       <h2>current conditions</h2>
