--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       <ul id="current-weather-results"></ul>
     </section>
     <section id="search-by-time">
-      <h2 id="time-picker">search by time</h2>
+      <h2 id="time-picker">search by time(s)</h2>
+      <p>You can get results for multiple times to plan your trip!</p>
       <form id="user-selection">
         <label for="time">Choose a time:</label>
         <select id="user-time" name="user-time">
