--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
   </head>
   <body>
     <header>
-      <h1>LightHouse</h1>
-      <p>Check Marine Weather Conditions in Tampa Bay</p>
+      <h1>Lighthouse</h1>
+      <p>Marine Weather Conditions in Tampa Bay</p>
     </header>
     <section id="current-weather">
-      <h2>current conditions</h2>
+      <!--<h2>current conditions</h2>-->
       <ul id="current-weather-results"></ul>
     </section>
     <section id="search-by-time">
       <h2 id="time-picker">search by time(s)</h2>
       <p>You can get results for multiple times to plan your trip!</p>
       <form id="user-selection">
-        <label for="time">Choose a time:</label>
+        <label for="time">search by time(s):</label>
         <select id="user-time" name="user-time">
           <option value="0">12:00 am</option>
           <option value="1">1:00 am</option>
