--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   <body>
     <header>
       <h1>Lighthouse</h1>
-      <p>Marine Weather Conditions in Tampa Bay</p>
     </header>
+    <section class="blurb">
+      <p>Marine Weather Conditions in Tampa Bay</p>
+    </section>
     <section id="current-weather">
       <!--<h2>current conditions</h2>-->
       <ul id="current-weather-results"></ul>
