mobile design done?

--- a/index.html
+++ b/index.html
@@ -14,49 +14,50 @@
     <header>
       <h1>Lighthouse</h1>
     </header>
-    <section class="blurb">
-      <p>Marine Weather Conditions in Tampa Bay</p>
-    </section>
-    <section id="current-weather">
-      <!--<h2>current conditions</h2>-->
-      <ul id="current-weather-results"></ul>
-    </section>
-    <section id="search-by-time">
-      <h2 id="time-picker">search by time(s)</h2>
-      <p>You can get results for multiple times to plan your trip!</p>
-      <form id="user-selection">
-        <label for="time">search by time(s):</label>
-        <select id="user-time" name="user-time">
-          <option value="0">12:00 am</option>
-          <option value="1">1:00 am</option>
-          <option value="2">2:00 am</option>
-          <option value="3">3:00 am</option>
-          <option value="4">4:00 am</option>
-          <option value="5">5:00 am</option>
-          <option value="6">6:00 am</option>
-          <option value="6">7:00 am</option>
-          <option value="8">8:00 am</option>
-          <option value="9">9:00 am</option>
-          <option value="10">10:00 am</option>
-          <option value="11">11:00 am</option>
-          <option value="12">12:00 pm</option>
-          <option value="13">1:00 pm</option>
-          <option value="14">2:00 pm</option>
-          <option value="15">3:00 pm</option>
-          <option value="16">4:00 pm</option>
-          <option value="17">5:00 pm</option>
-          <option value="18">6:00 pm</option>
-          <option value="19">7:00 pm</option>
-          <option value="20">8:00 pm</option>
-          <option value="21">9:00 pm</option>
-          <option value="22">10:00 pm</option>
-          <option value="23">11:00 pm</option>
-        </select>
-        <input id=" selection" type="submit" />
-        <button id="reset" type="button">reset</button>
-      </form>
-      <ul id="selected-weather-results"></ul>
-    </section>
+    <main id="main">
+      <section class="blurb">
+        <p>Marine Weather Conditions in Tampa Bay</p>
+      </section>
+      <section id="current-weather">
+        <!--<h2>current conditions</h2>-->
+        <ul id="current-weather-results"></ul>
+      </section>
+      <section id="search-by-time">
+        <p>Search for results for multiple times to plan your trip</p>
+        <form id="user-selection">
+          <label for="time">search by time(s):</label>
+          <select id="user-time" name="user-time">
+            <option value="0">12:00 am</option>
+            <option value="1">1:00 am</option>
+            <option value="2">2:00 am</option>
+            <option value="3">3:00 am</option>
+            <option value="4">4:00 am</option>
+            <option value="5">5:00 am</option>
+            <option value="6">6:00 am</option>
+            <option value="6">7:00 am</option>
+            <option value="8">8:00 am</option>
+            <option value="9">9:00 am</option>
+            <option value="10">10:00 am</option>
+            <option value="11">11:00 am</option>
+            <option value="12">12:00 pm</option>
+            <option value="13">1:00 pm</option>
+            <option value="14">2:00 pm</option>
+            <option value="15">3:00 pm</option>
+            <option value="16">4:00 pm</option>
+            <option value="17">5:00 pm</option>
+            <option value="18">6:00 pm</option>
+            <option value="19">7:00 pm</option>
+            <option value="20">8:00 pm</option>
+            <option value="21">9:00 pm</option>
+            <option value="22">10:00 pm</option>
+            <option value="23">11:00 pm</option>
+          </select>
+          <input id="selection" type="submit" value="search" />
+          <button id="reset" type="button">reset</button>
+        </form>
+        <ul id="selected-weather-results"></ul>
+      </section>
+    </main>
     <script
       src="https://code.jquery.com/jquery-3.3.1.js"
       integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
