--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -26,7 +26,7 @@
         <p>Search for results for multiple times to plan your trip</p>
         <form id="user-selection">
           <label for="time">search by time(s):</label>
-          <select id="user-time" name="user-time">
+          <select id="user-time" name="user-time" for="select times">
             <option value="0">12:00 am</option>
             <option value="1">1:00 am</option>
             <option value="2">2:00 am</option>
