added select label

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <p>Search for results for multiple times to plan your trip</p>
         <form id="user-selection">
           <label for="time">search by time(s):</label>
-          <select id="user-time" name="user-time" for="select times">
+          <select id="user-time" name="user-time">
+            <label for="select times"></label>
             <option value="0">12:00 am</option>
             <option value="1">1:00 am</option>
             <option value="2">2:00 am</option>
