need to set up error handling in fetch block

--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
     </header>
     <main id="main">
       <section class="blurb">
-        <p>Marine Weather Conditions in Tampa Bay</p>
+        <p>SAILING | FISHING | KAYAKING</p>
+        <p>Marine Weather Conditions off Davis Island in Tampa Bay</p>
       </section>
       <section id="current-weather">
         <!--<h2>current conditions</h2>-->
         <ul id="current-weather-results"></ul>
       </section>
       <section id="search-by-time">
-        <p>Search for results for multiple times to plan your trip</p>
+        <p>
+          Search for results for multiple times to see how conditions will
+          change while you are on the water
+        </p>
         <form id="user-selection">
           <label for="time">search by time(s):</label>
           <select id="user-time" name="user-time">
