--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       </section>
       <section id="search-by-time">
         <p>
-          Search for results for multiple times to see how conditions will
-          change while you are on the water
+          Search for multiple times to see how conditions will change while you
+          are on the water
         </p>
         <form id="user-selection">
-          <label for="time">search by time(s):</label>
+          <label>search by time(s):</label>
           <select id="user-time" name="user-time">
             <label for="select times"></label>
             <option value="0">12:00 am</option>
@@ -63,6 +63,7 @@
         <ul id="selected-weather-results"></ul>
       </section>
     </main>
+    <footer>&copy; Chayce Knaub 2020</footer>
     <script
       src="https://code.jquery.com/jquery-3.3.1.js"
       integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
