--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           are on the water
         </p>
         <form id="user-selection">
-          <label>search by time(s):</label>
+          <label for="search">search by time(s):</label>
           <select id="user-time" name="user-time">
             <label for="select times"></label>
             <option value="0">12:00 am</option>
