--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
           are on the water
         </p>
         <form id="user-selection">
-          <label for="search">search by time(s):</label>
+          <label for="selection">search by time(s):</label>
           <select id="user-time" name="user-time">
-            <label for="select times"></label>
+            <label for="user-time"></label>
             <option value="0">12:00 am</option>
             <option value="1">1:00 am</option>
             <option value="2">2:00 am</option>
