--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
         </p>
         <form id="user-selection">
           <label for="selection">search by time(s):</label>
+          <label for="user-time"></label>
           <select id="user-time" name="user-time">
-            <label for="user-time"></label>
+            <label for="select times"></label>
             <option value="0">12:00 am</option>
             <option value="1">1:00 am</option>
             <option value="2">2:00 am</option>
