--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
           are on the water
         </p>
         <form id="user-selection">
-          <label for="selection">search by time(s):</label>
-          <label for="user-time"></label>
+          <label for="user-time">search by time(s):</label>
           <select id="user-time" name="user-time">
             <label for="select times"></label>
             <option value="0">12:00 am</option>
