html changes for a11y

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="main.css" />
-    <link href="images/" />
+    <link rel="images" href="images/" />
   </head>
   <body>
     <header>
@@ -16,7 +16,7 @@
     </header>
     <main id="main">
       <section class="blurb">
-        <p>SAILING | FISHING | KAYAKING</p>
+        <h2>SAILING | FISHING | KAYAKING</h2>
         <p>Marine Weather Conditions off Davis Island in Tampa Bay</p>
       </section>
       <section id="current-weather">
@@ -30,7 +30,6 @@
         <form id="user-selection">
           <label for="user-time">search by time(s):</label>
           <select id="user-time" name="user-time">
-            <label for="select times"></label>
             <option value="0">12:00 am</option>
             <option value="1">1:00 am</option>
             <option value="2">2:00 am</option>
@@ -69,6 +68,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="index.js" async defer></script>
+    <script src="index.js"></script>
   </body>
 </html>
