fixed errors, added error handling for fetch

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <h2>SAILING | FISHING | KAYAKING</h2>
         <p>Marine Weather Conditions | Search by Latitude and Longitude</p>
       </section>
+      <p id="js-error-message" class="error-message"></p>
       <section id="coordinates">
         <h2>
           See current Marine Weather conditions for any location worldwide:
@@ -70,6 +71,7 @@
           <input id="selection" type="submit" value="search" />
           <button id="reset" type="button">reset</button>
         </form>
+
         <ul id="selected-weather-results"></ul>
       </section>
     </main>
