--- a/index.html
+++ b/index.html
@@ -17,20 +17,10 @@
     <main id="main">
       <section class="blurb">
         <h2>SAILING | FISHING | KAYAKING</h2>
-        <p>Marine Weather Conditions | Search by Latitude and Longitude</p>
+        <p>Marine Weather Conditions in the Tampa Bay </p>
       </section>
       <p id="js-error-message" class="error-message"></p>
-      <section id="coordinates">
-        <h2>
-          See current Marine Weather conditions for any location worldwide:
-        </h2>
-        <form>
-          <label for="lat">latitude:</label>
-          <input type="number" id="lat" name="lat" min="-90" max="90" />
-          <label for="long">longitude:</label>
-          <input type="number" id="long" name="long" min="0" max="180" />
-        </form>
-        <button></button>
+      
       </section>
       <section id="current-weather">
         <ul id="current-weather-results"></ul>
